--- a/style/editor.css
+++ b/style/editor.css
@@ -57,11 +57,11 @@
 }
 
 #edit-zone:before {
-	background-image: linear-gradient(to right, currentColor, transparent);
+	background-image: linear-gradient(to right, currentColor, rgba(255, 255, 255, 0));
 }
 
 #edit-zone:after {
-	background-image: linear-gradient(to left, currentColor, transparent);
+	background-image: linear-gradient(to left, currentColor, rgba(255, 255, 255, 0));
 }
 
 #edit-zone ul {
